src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>c2g__CODAIncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Rents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Royalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Other Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Federal Income Tax Withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Fishing Boat Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Medical and Healthcare Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Nonemployee Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Crop Insurance Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Unused 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Unused 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - Excess Golden Parachute Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reportable</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Input VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInvoiceEmail__c</fullName>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__CODAMergeId__c</fullName>
        <label>Merge Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAOutputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPaymentMethod__c</fullName>
        <description>The payment method</description>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAReportingCode__c</fullName>
        <description>A unique code used for reporting</description>
        <label>Reporting Code</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt for Qualifying Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAShippingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(ShippingStreet) &amp;&amp;
ISBLANK(ShippingCity) &amp;&amp;
ISBLANK(ShippingState) &amp;&amp;
ISBLANK(ShippingPostalCode) &amp;&amp;
ISBLANK(ShippingCountry)) &amp;&amp;
c2g__CODAValidatedShippingStreet__c == ShippingStreet &amp;&amp;
c2g__CODAValidatedShippingCity__c == ShippingCity &amp;&amp;
c2g__CODAValidatedShippingState__c == ShippingState &amp;&amp;
c2g__CODAValidatedShippingPostCode__c == ShippingPostalCode &amp;&amp;
c2g__CODAValidatedShippingCountry__c == ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCalculationMethod__c</fullName>
        <description>The method of calculating tax in the UK.</description>
        <label>Tax Calculation Method</label>
        <picklist>
            <picklistValues>
                <fullName>Gross</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net of Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxpayerIdentificationNumber__c</fullName>
        <description>Taxpayer Identification Number</description>
        <label>Taxpayer Identification Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATRegistrationNumber__c</fullName>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATStatus__c</fullName>
        <label>Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EC Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC Non-registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCity__c</fullName>
        <label>ValidatedBillingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCountry__c</fullName>
        <label>ValidatedBillingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingPostCode__c</fullName>
        <label>ValidatedBillingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingState__c</fullName>
        <label>ValidatedBillingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingStreet__c</fullName>
        <label>ValidatedBillingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCity__c</fullName>
        <label>ValidatedShippingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCountry__c</fullName>
        <label>ValidatedShippingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingPostCode__c</fullName>
        <label>ValidatedShippingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingState__c</fullName>
        <label>ValidatedShippingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingStreet__c</fullName>
        <label>ValidatedShippingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffps_dmg__AccountHierarchyIndexed__c</fullName>
        <externalId>true</externalId>
        <label>Account Hierarchy Indexed</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_dmg__AccountHierarchy__c</fullName>
        <formula>if (ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.ParentId) || Parent.Parent.Parent.Parent.Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.Parent.Parent.Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.Parent.Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true,&apos;&apos;,Parent.Parent.Parent.Parent.Parent.Parent.ParentId + &apos;:&apos;) +
if (ISBLANK(Parent.Parent.Parent.Parent.Parent.ParentId) || Parent.Parent.Parent.Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.Parent.Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true,&apos;&apos;,Parent.Parent.Parent.Parent.Parent.ParentId + &apos;:&apos;) +
if (ISBLANK(Parent.Parent.Parent.Parent.ParentId) || Parent.Parent.Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true,&apos;&apos;,Parent.Parent.Parent.Parent.ParentId + &apos;:&apos;) +
if (ISBLANK(Parent.Parent.Parent.ParentId) || Parent.Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true,&apos;&apos;,Parent.Parent.Parent.ParentId + &apos;:&apos;) +
if (ISBLANK(Parent.Parent.ParentId) || Parent.Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true,&apos;&apos;,Parent.Parent.ParentId + &apos;:&apos;) +
if (ISBLANK(Parent.ParentId) || Parent.ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true || ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true,&apos;&apos;,Parent.ParentId + &apos;:&apos;) +
if (ISBLANK(ParentId) || ffps_dmg__ExcludeFromSalesLedgerHierarchy__c = true,&apos;&apos;,ParentId + &apos;:&apos;) +
Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_dmg__CloseDate__c</fullName>
        <description>The Date the Account was closed.</description>
        <inlineHelpText>The Date the Account was closed.</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_dmg__CloseStatus__c</fullName>
        <description>The Close Status of the Account.</description>
        <inlineHelpText>The Close Status of the Account.</inlineHelpText>
        <label>Close Status</label>
        <picklist>
            <picklistValues>
                <fullName>Live</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ffps_dmg__ExcludeFromSalesLedgerHierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude this Account from the Account Hierarchy chain. (used for selecting Accounts in Super Cash Matching)</description>
        <inlineHelpText>Exclude this Account from the Account Hierarchy chain. (used for selecting Accounts in Super Cash Matching)</inlineHelpText>
        <label>Exclude from Sales Ledger Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__BillingAddressStatus__c</fullName>
        <label>Billing Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not checked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsed but not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambiguous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pw_cc__BillingCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__BillingStateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingAddressStatus__c</fullName>
        <label>Shipping Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not checked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsed but not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambiguous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Accounts (Shipping Country Lookup)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ShippingStateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Accounts (Shipping State Lookup)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AccountsWithMailClassifiedCategory</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>IndClassLvl2__c</columns>
        <columns>Classified_Minor_Category__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>Days_Since_Activity__c</columns>
        <columns>CustomerRef3__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IndClassLvl1__c</field>
            <operation>equals</operation>
            <value>Travel UK</value>
        </filters>
        <label>Accounts: All Travel UK</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedSalesTeam3Manager</roleAndSubordinates>
            <roleAndSubordinates>MailClassifiedScotlandSalesManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_All_Categories_CareerMail</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>IndClassLvl1__c</columns>
        <columns>IndClassLvl2__c</columns>
        <columns>Classified_Minor_Category__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>Days_Since_Activity__c</columns>
        <columns>CustomerRef3__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IndClassLvl1__c</field>
            <operation>equals</operation>
            <value>Business &amp; Finance,Education,Recruitment</value>
        </filters>
        <label>Accounts: All Categories CareerMail</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedSalesTeam1Manager</roleAndSubordinates>
            <roleAndSubordinates>MailClassifiedScotlandSalesManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_All_H_G_Mail_Order_Fashion</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>IndClassLvl1__c</columns>
        <columns>IndClassLvl2__c</columns>
        <columns>Classified_Minor_Category__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>Days_Since_Activity__c</columns>
        <columns>CustomerRef3__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IndClassLvl1__c</field>
            <operation>equals</operation>
            <value>Fashion &amp; Retail,Homes &amp; Gardens,Mail Order</value>
        </filters>
        <label>Accounts: All H&amp;G, Mail Order &amp; Fashion</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedSalesTeam3Manager</roleAndSubordinates>
            <roleAndSubordinates>MailClassifiedSalesTeam4Manager</roleAndSubordinates>
            <roleAndSubordinates>MailClassifiedScotlandSalesManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_All_Mobility_Health</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>IndClassLvl1__c</columns>
        <columns>IndClassLvl2__c</columns>
        <columns>Classified_Minor_Category__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>Days_Since_Activity__c</columns>
        <columns>CustomerRef3__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IndClassLvl1__c</field>
            <operation>equals</operation>
            <value>Health,Mobility</value>
        </filters>
        <filters>
            <field>IndClassLvl2__c</field>
            <operation>includes</operation>
            <value>Health Products</value>
        </filters>
        <filters>
            <field>IndClassLvl2__c</field>
            <operation>includes</operation>
            <value>Hearing Aids</value>
        </filters>
        <label>Accounts: All Mobility &amp; Health</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedSalesTeam1Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_All_Motors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>IndClassLvl1__c</columns>
        <columns>IndClassLvl2__c</columns>
        <columns>Classified_Minor_Category__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>Days_Since_Activity__c</columns>
        <columns>CustomerRef3__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IndClassLvl1__c</field>
            <operation>equals</operation>
            <value>Motors</value>
        </filters>
        <label>Accounts: All Motors</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedSalesTeam4Manager</roleAndSubordinates>
            <roleAndSubordinates>MailClassifiedScotlandSalesManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_All_Personal_Notices</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>IndClassLvl1__c</columns>
        <columns>IndClassLvl2__c</columns>
        <columns>Classified_Minor_Category__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>Days_Since_Activity__c</columns>
        <columns>CustomerRef3__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IndClassLvl1__c</field>
            <operation>equals</operation>
            <value>Personal &amp; Notices</value>
        </filters>
        <label>Accounts: All Personal &amp; Notices</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedSalesTeam1Manager</roleAndSubordinates>
            <roleAndSubordinates>MailClassifiedScotlandSalesManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_All_Property_Advertisers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>IndClassLvl1__c</columns>
        <columns>IndClassLvl2__c</columns>
        <columns>Classified_Minor_Category__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>Days_Since_Activity__c</columns>
        <columns>CustomerRef3__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IndClassLvl1__c</field>
            <operation>equals</operation>
            <value>Property Overseas,Property UK</value>
        </filters>
        <label>Accounts: All Property Advertisers</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedSalesTeam4Manager</roleAndSubordinates>
            <roleAndSubordinates>MailClassifiedScotlandSalesManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_All_Travel_Overseas</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>IndClassLvl2__c</columns>
        <columns>Classified_Minor_Category__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>Days_Since_Activity__c</columns>
        <columns>CustomerRef3__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IndClassLvl1__c</field>
            <operation>equals</operation>
            <value>Travel Overseas</value>
        </filters>
        <label>Accounts: All Travel Overseas</label>
        <sharedTo>
            <roleAndSubordinates>MailClassifiedSalesTeam2Manager</roleAndSubordinates>
            <roleAndSubordinates>MailClassifiedScotlandSalesManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Active_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>IsActive__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Advertisers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Advertiser</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Advertisers</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Agencies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Agency</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Agencies</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Media_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Media_Partner</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Media Partners</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Accounts</label>
    </listViews>
    <listViews>
        <fullName>Education_A_C_D_G_I_K_L_O_Q_S</fullName>
        <booleanFilter>(1 AND 2 AND 3) or (4 or 5 or 6)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>IndClassLvl1__c</columns>
        <columns>Days_Since_Activity__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>A,C,D,G,I,K,L,O,Q,S,U,Y,Z</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IndClassLvl1__c</field>
            <operation>equals</operation>
            <value>Education</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>DWS Advertising Ltd,SMRS (Manchester) Ltd,Red Kettle</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>11 Ten Group,Fundamental Media UK Ltd,Blue Tiger Marketing</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Consul Media,Zest Media South West Ltd</value>
        </filters>
        <label>Education A, C, D, G, I, K, L, O, Q, S,U</label>
        <sharedTo>
            <group>LondonClassifiedEducation</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Education_B_E_F_H_J_M_N_P_R_T</fullName>
        <booleanFilter>(1 AND 2 AND 3)or(4 or 5 or 6)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>IndClassLvl1__c</columns>
        <columns>Days_Since_Activity__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>B,E,F,H,J,M,N,P,R,T,V,W,X</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IndClassLvl1__c</field>
            <operation>equals</operation>
            <value>Education</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Penna Plc T/a Penna Barkers,Hunterlodge,Meerkat Works,TMP (UK) Ltd</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Waxmans Ltd,Mkh Advertising Ltd,Tcs Media Planning &amp; Buying Ltd,360 Education</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>MJD Consultancy,Red Squirrel (Advertising Agency),Frank Comms</value>
        </filters>
        <label>Education B, E, F, H, J, M, N, P, R, T,</label>
        <sharedTo>
            <group>LondonClassifiedEducation</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Advertiser</fullName>
        <active>true</active>
        <description>Please use this record type to create an Advertiser.</description>
        <label>Advertiser</label>
    </recordTypes>
    <recordTypes>
        <fullName>Agency</fullName>
        <active>true</active>
        <description>Please select this record type to create an Agency.</description>
        <label>Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Circulation</fullName>
        <active>true</active>
        <description>Please select this record type to create a Newspaper Sales Account</description>
        <label>Circulation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Media_Partner</fullName>
        <active>true</active>
        <description>Please select this record type to create a Media Partner.</description>
        <label>Media Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Advertising</fullName>
        <active>true</active>
        <description>Use this record type to create a non advertising or non circulation record</description>
        <label>Non Advertising</label>
    </recordTypes>
</CustomObject>